src/syntax/bibtex/snapshots/texlab__syntax__bibtex__parser__tests__entry_no_fields.snap
---
source: src/syntax/bibtex/parser.rs
expression: "setup(r#\"@article{foo,}\"#)"

---
ROOT@0..14
  ENTRY@0..14
    ENTRY_TYPE@0..8 "@article"
    L_CURLY@8..9 "{"
    WORD@9..12 "foo"
    COMMA@12..13 ","
    R_CURLY@13..14 "}"

