src/syntax/bibtex/snapshots/texlab__syntax__bibtex__parser__tests__entry_one_field_number_key.snap
---
source: src/syntax/bibtex/parser.rs
expression: "setup(r#\"@article{foo2021, author = {Foo Bar}}\"#)"

---
ROOT@0..37
  ENTRY@0..37
    ENTRY_TYPE@0..8 "@article"
    L_CURLY@8..9 "{"
    WORD@9..16 "foo2021"
    COMMA@16..17 ","
    WHITESPACE@17..18 " "
    FIELD@18..36
      WORD@18..24 "author"
      WHITESPACE@24..25 " "
      EQUALITY_SIGN@25..26 "="
      WHITESPACE@26..27 " "
      VALUE@27..36
        TOKEN@27..36
          BRACE_GROUP@27..36
            L_CURLY@27..28 "{"
            WORD@28..31 "Foo"
            WHITESPACE@31..32 " "
            WORD@32..35 "Bar"
            R_CURLY@35..36 "}"
    R_CURLY@36..37 "}"

