src/syntax/bibtex/snapshots/texlab__syntax__bibtex__parser__tests__entry_two_fields_incomplete.snap
---
source: src/syntax/bibtex/parser.rs
expression: "setup(r#\"@article{foo, author = {Foo Bar}, t}\"#)"

---
ROOT@0..36
  ENTRY@0..36
    ENTRY_TYPE@0..8 "@article"
    L_CURLY@8..9 "{"
    WORD@9..12 "foo"
    COMMA@12..13 ","
    WHITESPACE@13..14 " "
    FIELD@14..32
      WORD@14..20 "author"
      WHITESPACE@20..21 " "
      EQUALITY_SIGN@21..22 "="
      WHITESPACE@22..23 " "
      VALUE@23..32
        TOKEN@23..32
          BRACE_GROUP@23..32
            L_CURLY@23..24 "{"
            WORD@24..27 "Foo"
            WHITESPACE@27..28 " "
            WORD@28..31 "Bar"
            R_CURLY@31..32 "}"
    COMMA@32..33 ","
    WHITESPACE@33..34 " "
    FIELD@34..35
      WORD@34..35 "t"
      MISSING@35..35 ""
      MISSING@35..35 ""
    R_CURLY@35..36 "}"

