src/syntax/bibtex/snapshots/texlab__syntax__bibtex__parser__tests__preamble_casing.snap
---
source: src/syntax/bibtex/parser.rs
expression: "setup(r#\"@preAmbLe{ \"Hello World\" }\"#)"

---
PREAMBLE@0..26
  PREAMBLE_TYPE@0..9 "@preAmbLe"
  L_CURLY@9..10 "{"
  WHITESPACE@10..11 " "
  VALUE@11..25
    TOKEN@11..25
      QUOTE_GROUP@11..25
        QUOTE@11..12 "\""
        WORD@12..17 "Hello"
        WHITESPACE@17..18 " "
        WORD@18..23 "World"
        QUOTE@23..24 "\""
        WHITESPACE@24..25 " "
  R_CURLY@25..26 "}"

